--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,3 +52,25 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_URL }} #OPTIONAL
+
+
+  BUILD_AND_PUBLISH:   # New Job 
+  needs: Testing # اذا ماحطيت هذي كل الجوبين بيشتغلون in parallel
+  runs-on: ubuntu-latest # في كونتينر اخر معزول
+    steps:
+      - name: Code checkout
+        uses: actions/checkout@v4
+      
+      - name: Build & Upload image to ECR
+        uses: appleboy/docker-ecr-action@master
+        with:
+          access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          registry: ${{ secrets.REGISTRY }}
+          repo: ${{ env.ECR_REPOSITORY }}
+          region: ${{ env.AWS_REGION }}
+          tags: latest,${{ github.run_number }} # بياخذ اخر رقم للبلد حقت الورك فلو بالصورة تحت
+          daemon_off: false
+          dockerfile: ./Dockerfile
+          context: ./
+      
